k8s/infrastructure/pihole/stg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  labels:
    expose: yes
spec:
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: dns-udp
    - name: dns
      protocol: TCP
      port: 53
      targetPort: dns
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
  loadBalancerIP: 10.69.69.10
