k8s/infrastructure/pihole/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-rajsingh-info-tls
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: "true"
    item.homer.rajsingh.info/Logo: https://pihole${INGRESS_SUFFIX/./-}/admin/img/logo.svg
    item.homer.rajsingh.info/Name: "PiHole"
    item.homer.rajsingh.info/Url: "https://pihole${INGRESS_SUFFIX/./-}/admin"
    item.homer.rajsingh.info/Type: PiHole
    item.homer.rajsingh.info/Apikey: fd8054cf0a70de33ff772341546f1cc33e0eff21b6f181946280a3502b0bf027
spec:
  ingressClassName: cilium
  rules:
    - host: pihole${INGRESS_SUFFIX/./-}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  name: http
  tls:
    - secretName: pihole-rajsingh-info-tls
      hosts:
        - pihole${INGRESS_SUFFIX/./-}
